# my_project

./: .editorconfig  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/my_project/: __init__.py
tests/: test_format.py
